--- a/front/css/styles.css
+++ b/front/css/styles.css
@@ -1,107 +1,133 @@
+@font-face {
+  font-family: "HarryPotter";
+  src: url("fonts/HarryPotter-ov4z.ttf") format("truetype");
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Georgia, "Times New Roman", Times, serif;
 }
+
 body {
-  background: peachpuff;
+  margin: 0;
+  padding: 0;
+  font-family: "HarryPotter", sans-serif;
 }
+
+#background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 90vh;
 }
+
 .box {
   background: whitesmoke;
   display: flex;
   flex-direction: column;
-  padding: 30px 30px;
-  border: radius 20px;
+  padding: 30px;
+  border-radius: 1.25rem;
   box-shadow:
     0 0 128px 0 gainsboro,
     0 32px 64px -48px black;
 }
+
 .form-box {
   width: 450px;
   margin: 0px 10px;
 }
+
 .form-box header {
   font-size: 25px;
   font-weight: 600;
   padding-bottom: 10px;
   margin-bottom: 10px;
 }
+
 .form-box form .field {
   display: flex;
   margin-bottom: 10px;
   flex-direction: column;
 }
+
 .form-box form .input input {
-  height: 40px;
+  height: 2.5rem;
   width: 100%;
-  font-size: 16px;
+  font-size: 1rem;
   padding: 0 10px;
-  border-radius: 5px;
+  border-radius: 0.3rem;
   border: 1px solid;
   outline: none;
 }
+
 .btn {
-  height: 35px;
+  height: 2.2rem;
   background-color: darkgray;
   border: 0;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   color: white;
-  font-size: 15px;
+  font-size: 0.9375rem;
   cursor: pointer;
   transition: all 0.2s;
   margin-top: 10px;
-  padding: 0px 10px;
+  padding: 0 10px;
 }
+
 .submit {
   width: 100%;
 }
+
 .link {
   margin-top: 15px;
 }
 
-/*** accueil***/
 .nav {
   background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 0.6rem 1.25rem;
   z-index: 100;
 }
 
 .logo {
-  font-size: 25px;
+  font-size: 1.6rem;
   font-weight: 900;
 }
 
 .liens a {
-  margin-left: 20px;
+  margin-left: 1.25rem;
 }
 
-@media only screen and (max-width: 840px) {
+@media only screen and (max-width: 52.5rem) {
   .nav {
     flex-direction: column;
     align-items: flex-start;
   }
 
   .liens {
-    margin-top: 20px;
+    margin-top: 1.25rem;
   }
 }
+
 .message {
   text-align: center;
   background: white;
-  padding: 15px 0px;
+  padding: 0.9rem 0;
   border: 1px solid burlywood;
-  border-radius: 5px;
+  border-radius: 0.3rem; /* 5px */
   margin-bottom: 10px;
   color: brown;
 }
