--- a/front/css/cards.css
+++ b/front/css/cards.css
@@ -4,39 +4,76 @@ body {
   background-size: cover;
   background-position: center;
   font-family: Arial, sans-serif;
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+header {
+  width: 100%;
+  padding: 10px 0;
+  text-align: center;
 }
 
 .search-wrapper {
   display: flex;
-  align-content: center;
+  align-items: center;
   justify-content: center;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  padding: 20px 0;
-  margin-top: 7%;
   text-align: center;
-  z-index: 1;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.input-holder {
+  position: relative;
+}
+
+.search-input {
+  padding: 10px;
+  width: 300px;
+  border: 2px solid #ccc;
+  border-radius: 30px;
+  outline: none;
+}
+
+.search-input:focus {
+  border-color: #007bff;
+}
+
+.search-icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 .menu {
   width: 85%;
-  margin: auto;
-  padding: 35px 0;
+  margin: 0 auto;
+  padding: 20px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.menu ul li {
-  position: relative;
+.menu ul {
   list-style: none;
-  display: inline-block;
-  margin: 20px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.menu ul li {
+  margin: 0 10px;
+  position: relative;
 }
 
 .menu ul li a {
-  color: white;
+  color: rgb(254, 254, 254);
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -63,19 +100,6 @@ body {
   gap: 20px;
   padding: 20px;
   margin-top: 100px;
-}
-
-.search-input {
-  position: relative;
-  padding: 15px;
-  width: 300px;
-  border: 2px solid #ccc;
-  border-radius: 30px;
-  outline: none;
-}
-
-.search-input:focus {
-  border-color: #007bff;
 }
 
 .card {
