--- a/front/css/profil.css
+++ b/front/css/profil.css
@@ -2,29 +2,44 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #222222;
 }
 
 header {
   background-color: #333;
-  padding: 10px 0;
-}
-
-header nav ul {
-  list-style-type: none;
-  margin: 0;
   padding: 0;
-  text-align: center;
+}
+.menu {
+  width: 85%;
+  margin: auto;
+  padding: 35px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu ul li {
+  position: relative;
+  list-style: none;
+  display: inline-block;
+  margin: 20px;
 }
 
-header nav ul li {
-  display: inline;
-  margin-right: 20px;
-}
-
-header nav ul li a {
+.menu ul li a {
+  color: white;
   text-decoration: none;
-  color: #fff;
+  text-transform: uppercase;
+}
+.menu ul li::after {
+  background: gold;
+  content: "";
+  width: 0;
+  height: 3px;
+  position: absolute;
+  bottom: -8px;
+  left: 0;
+  transition: 0.5s;
+}
+.menu ul li:hover::after {
+  width: 100%;
 }
 
 .container {
@@ -86,4 +101,8 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
+}
+.backgroundImg img {
+  max-width: 100%;
+  height: auto;
 }
