--- a/front/css/accueil.css
+++ b/front/css/accueil.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
 }
+
 .container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(../images/background-harry.jpg);
@@ -12,6 +13,7 @@
   width: 100%;
   height: 100vh;
 }
+
 .menu {
   width: 85%;
   margin: auto;
@@ -20,6 +22,16 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.menu .burger-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.menu ul {
+  display: flex;
+}
+
 .menu ul li {
   position: relative;
   list-style: none;
@@ -32,6 +44,7 @@
   text-decoration: none;
   text-transform: uppercase;
 }
+
 .menu ul li::after {
   background: gold;
   content: "";
@@ -42,9 +55,11 @@
   left: 0;
   transition: 0.5s;
 }
+
 .menu ul li:hover::after {
   width: 100%;
 }
+
 .texte {
   top: 200px;
   display: flex;
@@ -54,10 +69,9 @@
   position: absolute;
   text-align: center;
   justify-content: center;
-
-  display: flex;
   color: rgb(255, 225, 59);
 }
+
 .texte h1 {
   display: inline;
   text-align: center;
@@ -68,6 +82,7 @@
   width: 100%;
   justify-content: center;
 }
+
 button {
   width: 200px;
   padding: 15px 0;
@@ -83,8 +98,51 @@ button {
   margin: 10px;
   overflow: hidden;
 }
+
 button:hover {
   transition: 0.4s linear;
   background-color: goldenrod;
   font-size: 10px;
+}
+
+/* Styles pour rendre le site responsive */
+@media (max-width: 768px) {
+  .menu {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .menu ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top: 60px;
+    left: 0;
+    padding: 10px;
+  }
+
+  .menu ul li {
+    margin: 10px 0;
+    width: 100%;
+  }
+
+  .menu .burger-menu {
+    display: block;
+  }
+
+  .texte {
+    top: 100px;
+    font-size: 30px;
+  }
+
+  button {
+    width: 150px;
+    top: 250px;
+  }
+}
+
+.menu ul.active {
+  display: flex;
 }
